# 16-channel

./: .gitignore  .skidlcfg  Makefile  board.kicad_pcb  board.kicad_pro  pyproject.toml  schem.erc  schem.net  schem.py  schem_lib_sklib.py  test_firmware.py
firmware/: conn.py  hal.py  interface.py  jsonrpc.py  main.py  pca9685.py
