[tool.poetry]
name = "16-channel"
version = "0.1.0"
description = ""
authors = ["John Maximilian <2e0byo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "16_channel"}]

[tool.poetry.dependencies]
python = "^3.11"
skidl = "^1.1.0"
attrdict3 = "^2.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
